[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi-vbms"
dynamic = ["version"]
description = "Simulation-based Inference on Virtual Brain Models of Disorders"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Abolfazl Ziaeemehr"},
    {name = "Meysam Hashemi"},
    {name = "Marmaduke M. Woodman"},
    {name = "Jan Fousek"},
    {name = "Spase Petkoski"},
    {name = "Viktor Jirsa"}
]
keywords = [
    "neuroscience",
    "brain-modeling",
    "simulation-based-inference",
    "virtual-brain-models",
    "bayesian-inference",
    "connectome"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "sbi>=0.19.0",
    "scikit-learn>=1.0.0",
    "numba>=0.55.0",
    "tqdm>=4.60.0",
    "jpype1>=1.4.0",
    "ipykernel>=6.0.0",
    "nbconvert>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

all = [
    "sbi-vbms[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ins-amu/SBI-VBMs"
Repository = "https://github.com/ins-amu/SBI-VBMs"
Documentation = "https://github.com/ins-amu/SBI-VBMs"
"Bug Tracker" = "https://github.com/ins-amu/SBI-VBMs/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src._version.__version__"}

[tool.setuptools.package-data]
src = ["infodynamics.jar", "model/*.hpp", "model/*.i", "model/makefile"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
